Add delete routes and button for all items when admin
